--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
+    "@types/uniqid": "^5.3.1",
     "date-fns": "^2.23.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
@@ -25,6 +26,7 @@
     "react-scripts": "4.0.3",
     "rxjs": "^7.2.0",
     "typescript": "^4.1.2",
+    "uniqid": "^5.4.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
