--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/uniqid": "^5.3.1",
     "date-fns": "^2.23.0",
+    "gh-pages": "^3.2.3",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -31,10 +32,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "deploy": "npm run build && gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "http://VladislavDan.github.io/MyCardsWeb",
   "eslintConfig": {
     "extends": [
       "react-app",
