--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/uniqid": "^5.3.1",
     "date-fns": "^2.23.0",
     "gh-pages": "^3.2.3",
+    "idb": "^7.0.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
