--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-window": "^1.8.5",
     "@types/uniqid": "^5.3.1",
     "date-fns": "^2.23.0",
     "gh-pages": "^3.2.3",
@@ -26,6 +27,7 @@
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-window": "^1.8.6",
     "rxjs": "^7.2.0",
     "typescript": "^4.1.2",
     "uniqid": "^5.4.0",
